# chip-8

./: CMakeLists.txt  README  README.md
include/: chip8.h  screen.h  window.h
src/: chip8.c  main.c  screen.c  window.c
